syntax = "proto3";

option go_package = "./pb";

package pb;

import "google/protobuf/timestamp.proto";


message Feed {
    int64 id = 1;
    int64 userID = 2;
    string Feed = 4;
    string media0 = 5;
    string media1 = 6;
    string media2 = 7;
    string media3 = 8;
    google.protobuf.Timestamp  create_time = 9;
}

message GetFeedListReq{
    int64 userID = 1;
    google.protobuf.Timestamp  start_time = 2;
}
message GetFeedListResp{
    repeated Feed Feed = 1;
}

message GetFeedListByPageReq{
    int64 userID = 1;
    google.protobuf.Timestamp  start_time = 2;
    int32 page = 3;
    int32 page_size = 4;
}
message GetFeedListByPageResp{
    repeated Feed Feed = 1;
}


message CreateFeedReq{
    int64 userID = 1;
    string content = 2;
    string media0 = 3;
    string media1 = 4;
    string media2 = 5;
    string media3 = 6;
}
message CreateFeedResp{
    int64 id = 1;
}

message UpdateFeedReq{
    int64 id = 1;
    int64 userID = 2;
    string content = 3;
    string media0 = 4;
    string media1 = 5;
    string media2 = 6;
    string media3 = 7;
}
message UpdateFeedResp{}

message DeleteFeedReq{
    int64 id = 1;
    int64 userID = 2;
}
message DeleteFeedResp{}

//comment

message Comment {
    int64 id = 1;
    int64 feedID = 2;
    int64 userID = 3;
    string content = 4;
    string media0 = 5;
    string media1 = 6;
    string media2 = 7;
    string media3 = 8;
    google.protobuf.Timestamp  create_time = 9;
}

message GetCommentListReq{
    int64 feedID = 1;
}
message GetCommentListResp{
    repeated Comment Comment = 1;
}

message GetCommentListByPageReq{
    int64 feedID = 1;
    int32 page = 2;
    int32 page_size = 3;
}
message GetCommentListByPageResp{
    repeated Comment Comment = 1;
}

message CreateCommentReq{
    int64 feedID = 1;
    int64 userID = 2;
    string content = 3;
    string media0 = 4;
    string media1 = 5;
    string media2 = 6;
    string media3 = 7;
}
message CreateCommentResp{
    int64 id = 1;
}

message UpdateCommentReq{
    int64 id = 1;
    int64 feedID = 2;
    int64 userID = 3;
    string content = 4;
    string media0 = 5;
    string media1 = 6;
    string media2 = 7;
    string media3 = 8;
}
message UpdateCommentResp{}

message DeleteCommentReq{
    int64 id = 1;
    int64 feedID = 2;
    int64 userID = 3;
}
message DeleteCommentResp{}

message SearchFeedReq{
    string keyword = 1;
}
message SearchFeedResp{
    repeated Feed Feed = 1;
}




service Content {

    rpc GetFeedList (GetFeedListReq) returns (GetFeedListResp) {}
    rpc GetFeedListByPage (GetFeedListByPageReq) returns (GetFeedListByPageResp) {}
    rpc CreateFeed (CreateFeedReq) returns (CreateFeedResp) {}
    rpc UpdateFeed (UpdateFeedReq) returns (UpdateFeedResp) {}
    rpc DeleteFeed (DeleteFeedReq) returns (DeleteFeedResp) {}

    //comment
    rpc GetCommentList (GetCommentListReq) returns (GetCommentListResp) {}
    rpc GetCommentListByPage (GetCommentListByPageReq) returns (GetCommentListByPageResp) {}
    rpc CreateComment (CreateCommentReq) returns (CreateCommentResp) {}
    rpc UpdateComment (UpdateCommentReq) returns (UpdateCommentResp) {}
    rpc DeleteComment (DeleteCommentReq) returns (DeleteCommentResp) {}


    rpc SearchFeed (SearchFeedReq) returns (SearchFeedResp) {}

}