syntax = "proto3";

option go_package = "./pb";

package pb;

message GetContentCounterRequest {
    string content_id = 1;
    bool is_comment = 2;
}
message GetContentCounterResponse {
    int32 comment_count = 1;
    int32 like_count = 2;
    int32 view_count = 3;
}

message GetUserCounterRequest {
    string user_id = 1;
}
message GetUserCounterResponse {
    int32 follower_count = 1;
    int32 following_count = 2;
    int32 feed_count = 3;
}


service counter {
    rpc getContentCounter (GetContentCounterRequest) returns (GetContentCounterResponse) {}
    rpc getUserCounter (GetUserCounterRequest) returns (GetUserCounterResponse) {}

}